spacing alignment & formatting fixes

--- a/src/_sass/theme/_hero.scss
+++ b/src/_sass/theme/_hero.scss
@@ -16,7 +16,7 @@
         margin-top: 0;
     }
 
-    &__content {
+    p {
         text-align: left;
         max-width: #{ $max-width * 1.5 + 'rem'};
         color: white;
